// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewGoals /> renders the UI as expected when no goals are present 1`] = `
<div
  className="main"
>
  <div
    className="wrapper"
  >
    <h1>
      It looks like you haven't added any goals yet. Click the button below to add your first goal.
    </h1>
    <a
      href="/add-goal"
      onClick={[Function]}
    >
      <button
        className="button"
      >
        <i
          className="fas fa-plus-circle bigButton"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`<ViewGoals /> renders the UI as expected when no goals are present 2`] = `
<div
  className="main"
>
  <div
    className="wrapper"
  >
    <h1>
      It looks like you haven't added any goals yet. Click the button below to add your first goal.
    </h1>
    <a
      href="/add-goal"
      onClick={[Function]}
    >
      <button
        className="button"
      >
        <i
          className="fas fa-plus-circle bigButton"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`<ViewGoals /> renders the UI as expected when there are goals present 1`] = `
<div
  className="main"
>
  <div
    className="wrapper"
  >
    <ul
      className="listContainer"
    >
      <div
        className="listHeader"
      >
        <h1
          className="listTitle"
        >
          Your goals
        </h1>
        <a
          className="addLink"
          href="/add-goal"
          onClick={[Function]}
        >
          <button
            className="button"
          >
            <i
              className="fas fa-plus-circle"
            />
          </button>
        </a>
      </div>
      <div
        className="goal"
        onClick={[Function]}
      >
        <li
          style={
            Object {
              "textDecoration": "none currentcolor solid",
            }
          }
        >
          test
        </li>
      </div>
      <div
        className="goal"
        onClick={[Function]}
      >
        <li
          style={
            Object {
              "textDecoration": "none currentcolor solid",
            }
          }
        >
          test2
        </li>
      </div>
    </ul>
  </div>
</div>
`;
